--- a/about.html
+++ b/about.html
@@ -69,11 +69,19 @@
           <div class="dark">
             <h3>Link</h3>
             <p>
-              <button class="button_1"><a href="#">HTML5</a></button>
+              <button class="button_1">
+                <a href="https://www.w3schools.com/html/default.asp">HTML5</a>
+              </button>
               <br /><br />
-              <button class="button_1"><a href="#">CSS3</a></button>
+              <button class="button_1">
+                <a href="https://www.w3schools.com/css/default.asp">CSS3</a>
+              </button>
               <br /><br />
-              <button class="button_1"><a href="#">Javascript</a></button>
+              <button class="button_1">
+                <a href="https://www.w3schools.com/js/default.asp"
+                  >Javascript</a
+                >
+              </button>
               <br /><br />
             </p>
           </div>
