--- a/about.html
+++ b/about.html
@@ -37,7 +37,9 @@
         <h1>뉴스레터 구독 신청</h1>
         <form>
           <input type="email" placeholder="Enter your email..." />
-          <button type="submit" class="button_1">구독신청</button>
+          <button type="submit" class="custom-btn btn-3">
+            <span>구독신청</span>
+          </button>
         </form>
       </div>
     </section>
@@ -69,17 +71,27 @@
           <div class="dark">
             <h3>Link</h3>
             <p>
-              <button class="button_1">
-                <a href="https://www.w3schools.com/html/default.asp">HTML5</a>
+              <button class="custom-btn btn-3">
+                <span
+                  ><a href="https://www.w3schools.com/html/default.asp"
+                    >HTML5</a
+                  ></span
+                >
               </button>
               <br /><br />
-              <button class="button_1">
-                <a href="https://www.w3schools.com/css/default.asp">CSS3</a>
+              <button class="custom-btn btn-3">
+                <span
+                  ><a href="https://www.w3schools.com/css/default.asp"
+                    >CSS3</a
+                  ></span
+                >
               </button>
               <br /><br />
-              <button class="button_1">
-                <a href="https://www.w3schools.com/js/default.asp"
-                  >Javascript</a
+              <button class="custom-btn btn-3">
+                <span
+                  ><a href="https://www.w3schools.com/js/default.asp"
+                    >Javascript</a
+                  ></span
                 >
               </button>
               <br /><br />
