--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         <h1>뉴스레터 구독 신청</h1>
         <form>
           <input type="email" placeholder="Enter your email..." />
-          <button type="submit" class="button_1">구독신청</button>
+          <button type="submit" class="custom-btn btn-3">
+            <span>구독신청</span>
+          </button>
         </form>
       </div>
     </section>
